01-swa-ec2-eip/network.tf
resource "aws_vpc" "this" {
  # variable
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "swa_01_vpc"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
}

resource "aws_subnet" "this" {
  vpc_id = aws_vpc.this.id
  # variable
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "swa_01_subnet"
  }
}

resource "aws_route_table" "this" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "swa_01_route_table"
  }
}

resource "aws_route_table_association" "this" {
  route_table_id = aws_route_table.this.id
  subnet_id      = aws_subnet.this.id
}
